--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -8,8 +8,10 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
+    "bootstrap": "^5.3.8",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
